--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,17 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "job_portal_django/wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles_build"
+        "maxDuration": 30
       }
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "poll/wsgi.py"
+      "dest": "job_portal_django/wsgi.py"
     }
   ]
 }
