--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==25.3.0
 black==24.8.0
 boto3==1.36.2
 botocore==1.36.26
+Brotli==1.1.0
 CacheControl==0.14.3
 cachetools==5.5.2
 certifi==2025.7.14
@@ -14,6 +15,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 cryptography==45.0.5
+dj-database-url==3.0.1
 Django==5.1.1
 django-auditlog==3.0.0
 django-cors-headers==4.4.0
@@ -65,4 +67,5 @@ twilio==9.3.1
 typing_extensions==4.14.1
 uritemplate==4.2.0
 urllib3==2.5.0
+whitenoise==6.9.0
 yarl==1.20.1
