--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ googleapis-common-protos==1.70.0
 grpcio==1.73.1
 grpcio-status==1.73.1
 gunicorn==23.0.0
+h11==0.16.0
 httplib2==0.22.0
 idna==3.10
 jmespath==1.0.1
@@ -67,6 +68,6 @@ twilio==9.3.1
 typing_extensions==4.14.1
 uritemplate==4.2.0
 urllib3==2.5.0
+uvicorn==0.35.0
 whitenoise==6.9.0
 yarl==1.20.1
-uvicorn[standard]
